fix social icons height on small devices

--- a/src/components/Grid2/styles.scss
+++ b/src/components/Grid2/styles.scss
@@ -85,7 +85,7 @@
   }
   &__social--img {
     width: 50%;
-    max-height: 100px;
+    max-height: 80px;
   }
   display: grid;
   height: 100%;
